# IdeasProject

./: .gitignore  CHANGELOG.md  IdeasProject.cabal  IdeasProject.sublime-workspace  README.md
app/: LogicExercices.hs  LogicReductionRules.hs  LogicReductionRules_Old.hs  LogicReductionStrategies.hs  LogicTestCases.hs  LogicTestFunctions.hs  LogicTests.hs  TestLogicReductions.hs
ideas-1.8/src/Ideas/Common/: Classes.hs  Constraint.hs  Context.hs  Derivation.hs  DerivationTree.hs  Environment.hs  Exercise.hs  ExerciseTests.hs  Id.hs  Library.hs  Predicate.hs  Rewriting.hs  Rule.hs  Strategy.hs  View.hs
ideas-1.8/src/Ideas/Encoding/: DecoderJSON.hs  DecoderXML.hs  Encoder.hs  EncoderHTML.hs  EncoderJSON.hs  EncoderXML.hs  Evaluator.hs  LinkManager.hs  Logging.hs  ModeJSON.hs  ModeXML.hs  OpenMathSupport.hs  Options.hs  Request.hs  RulePresenter.hs  RulesInfo.hs  StrategyInfo.hs
ideas-1.8/src/Ideas/Main/: CGI.hs  CmdLineOptions.hs  Default.hs  Revision.hs
ideas-1.8/src/Ideas/Service/: BasicServices.hs  Diagnose.hs  DomainReasoner.hs  FeedbackText.hs  ProblemDecomposition.hs  ServiceList.hs  State.hs  Submit.hs  Types.hs
ideas-1.8/src/Ideas/Text/: HTML.hs  JSON.hs  Latex.hs  MathML.hs  UTF8.hs  XML.hs
ideas-1.8/src/Ideas/Utils/: BlackBoxTests.hs  Parsing.hs  Prelude.hs  (+5 more)
ideas-math-types-1.1/: ideas-math-types.cabal
src/: LogicConstants.hs  LogicExercices.hs  LogicFunctions.hs  LogicMain.hs  LogicReductionRules.hs  LogicReductionRules_Old.hs  LogicReductionStrategies.hs  LogicTestCases.hs  LogicTestFunctions.hs  TestLogicFormula.hs  TestLogicReductions.hs  TestLogicReductions_Old.hs  UnificationTest.hs  demo.hs  exerciselist.xml  solution.xml  solutionToDnf.xml  test.hs
test/: IdeasProject.cabal
(+71 files in other folders)
