cabal-version:      3.6
name:               IdeasProject
version:            0.1.0.0
synopsis:           Thesis 

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             David Beniers
maintainer:         david.beniers@telenet.be

-- A copyright notice.
-- copyright:
category:           Education
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0,
                      ideas >=1.8,
                      ideas-math-types >=1.1,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable IdeasProject
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.12.0.0,
        IdeasProject,
        ideas >=1.8,
        ideas-math-types >=1.1, 
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite IdeasProject-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test,
                      src
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.12.0.0,
                      ideas >=1.8,
                      ideas-math-types >=1.1,
                      mtl
